[package]
name = "cli-tool"
version = "1.0.0"
edition = "2021"
authors = ["Hamisi Onesmus <kilumohamisi@gmail.com>"]
description = "A high-performance CLI tool for data processing and analysis"
license = "Apache-2.0"
repository = "https://github.com/hamisionesmus/rust-cli-tool"
homepage = "https://github.com/hamisionesmus/rust-cli-tool"
documentation = "https://docs.rs/cli-tool"
readme = "README.md"
keywords = ["cli", "data-processing", "analytics", "rust", "performance"]
categories = ["command-line-utilities", "data-structures", "parsing"]
exclude = ["examples/", "docs/"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
indicatif = "0.17"
console = "0.15"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
regex = "1.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
num_cpus = "1.15"
dirs = "5.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "gzip"] }
csv = "1.1"
xml-rs = "0.8"
flate2 = "1.0"
bzip2 = "0.4"
lz4 = "1.24"
zstd = "0.12"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.8"
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.17"
lazy_static = "1.4"
itertools = "0.10"
petgraph = "0.6"
statrs = "0.16"
ndarray = "0.15"
nalgebra = "0.32"
approx = "0.5"
tempfile = "3.6"
fs_extra = "1.3"
walkdir = "2.3"
glob = "0.3"
path-absolutize = "3.0"
same-file = "1.0"
notify = "6.0"
hotwatch = "0.4"
ctrlc = "3.4"
signal-hook = "0.3"
libc = "0.2"
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "wincon"] }
[target.'cfg(unix)'.dependencies]
nix = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
rstest = "0.17"
mockall = "0.11"
fake = "2.5"
test-case = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.6"
tokio-test = "0.4"

[[bench]]
name = "processing_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[[bench]]
name = "io_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[features]
default = ["parallel", "compression", "networking"]
parallel = ["rayon", "crossbeam"]
compression = ["flate2", "bzip2", "lz4", "zstd"]
networking = ["reqwest"]
metrics = []
profiling = ["pprof"]
plugin-system = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
multiple_crate_versions = "warn"
wildcard_dependencies = "warn"